- The smi.MibBuilder() will now raise more specific exceptions (MibLoadError,
  MibNotFoundError) on MIB loading problems rather than more generic
  SmiError.
- The oneliner's MibVariable MIB lookup subsystem redesigned for more
  generality to mimic OBJECT-TYPE macro capabilities related to SNMP
  PDU handling. The two new classed are ObjectIdentity and ObjectType.
  This new subsystem is moved from a scope of oneliner to more common
  pysnmp.smi.rfc1903 scope to more naturally invoke it from whatever
  part of pysnmp requires MIB services.
- MibBuilder now prepends the contents of environment variables it 
  recognizes (PYSNMP_MIB_DIR, PYSNMP_MIB_DIRS, PYSNMP_MIB_PKGS) rather
  than using them instead of its default core MIBs.
- Removed RowStatus default value as it may collide with possible subclass
  constraints.
- A few additional MIB tree management methods added to MibViewController
  to better address ordered nature of MIB tree nodes (namely, getFirst*,
  getLast* family of methods).
- Fix to authoritative engine side snmpEngineID discovery procedure: 
  respond with notInTimeWindows rather then with unsupportedSecurityLevel
  at time synchronization phase.
- Fix to rfc1902.Bits type to make it accepting hex and binary initializers,
  cope with missing bits identifieirs at prettyPrint().
- Memory leak fixed in CommandForwarder examples.
- Fix to BULK CommandGenerator to use the same nonRepeaters OIDs across
  multiple GETBULK iterations so returned table for nonRepeaters columns 
  would hold the same var-bind.
- Fix to CommandGenerator to make sendRequestHandle persistent across
  multiple iterations of GETNEXT/GETBULK queries.
- Fix to sendNotification() error handling at NotificationOriginator.
- Fix to preserve possible 'fixed length' setting atrfc1902.OctetString
  on clone()'ing and subtype()'ing.
- Fix to rfc1902.OctetString & Bits to base them on OctetString class to
  make the 'fixed length' property working.